--- a/index novo.html
+++ b/index novo.html
@@ -11,7 +11,7 @@
 		<h2 style="color: black;">Sobre</h2>
 		<p style="color:black;">Olá, bem-vindo ao site da Tulip Galery. Somos uma loja de artesanato, sendo eles amigurumis, biscuit, macramê com pedras e pulseiras.</p>
 		<br></br>
-		<h2 style="color: black;" aling="center">Contato</h2>
+		<h2 style="color: black;" align="center">Contato</h2>
 		<p style="color:black;">(16) 99466-1732</p>
 		<footer>
 			<p style="color: black;">Feito por: Jess Nunes</p>
