--- a/index novo.html
+++ b/index novo.html
@@ -1,8 +1,10 @@
 <html>
+	
 <meta charset="utf-8">
     <head>
+		<link rel="indexcss" href="indexnovo.css">
         <img src="logo ret.jpg" height="50%" width="100%"></>
-		<h1 style="color: black;" align="center">Tulip Galery</h1>
+		<h1  >Tulip Galery</h1>
 		<img src="tulip logo.jpg" height="30%" width="15%"></>
 		<title>Meu Site HTML</title>
 	</head>
