--- a/index novo.html
+++ b/index novo.html
@@ -2,22 +2,22 @@
 	
 <meta charset="utf-8">
     <head>
-		<link rel="indexcss" href="indexnovo.css">
-        <img src="logo ret.jpg" height="50%" width="100%"></>
+		<link rel="stylesheet" href="indexnovo.css">
+        <img src="logo ret.jpg" height="50%" width="100%">
 		<h1  >Tulip Galery</h1>
-		<img src="tulip logo.jpg" height="30%" width="15%"></>
+		<img src="tulip logo.jpg" height="30%" width="15%">
 		<title>Meu Site HTML</title>
 	</head>
-
-	<body style="background-color: rgb(238, 156, 204);">
-		<h2 style="color: black;">Sobre</h2>
-		<p style="color:black;">Olá, bem-vindo ao site da Tulip Galery. Somos uma loja de artesanato, sendo eles amigurumis, biscuit, macramê com pedras e pulseiras.</p>
+	
+	<body >
+		<h2 >Sobre</h2>
+		<p >Olá, bem-vindo ao site da Tulip Galery. Somos uma loja de artesanato, sendo eles amigurumis, biscuit, macramê com pedras e pulseiras.</p>
 		<br></br>
-		<h2 style="color: black;" align="center">Contato</h2>
-		<p style="color:black;">(16) 99466-1732</p>
+		<h2 >Contato</h2>
+		<p >(16) 99466-1732</p>
 		<footer>
-			<p style="color: black;">Feito por: Jess Nunes</p>
-			<p style="black;">E-mail: <a style="color:white;" href="mailto:jenunesg50@gmail.com"> jenunesg50@gmail.com </a> </p>
+			<p >Feito por: Jess Nunes</p>
+			<p >E-mail: <a href="mailto:jenunesg50@gmail.com"> jenunesg50@gmail.com </a> </p>
 		</footer>
 
 	</body>
